# Slydo

./: .gitignore  README.md  Slydo-开发规范与计划.md  backup.sh  公众号文章-Slydo-PPT知识库.md  小红书笔记-Slydo-PPT知识库.md  开发设计说明书-v3.1.md  开发设计说明书.md
deploy/: Dockerfile  (+4 more)
slydo-backend/: .env.example  .gitignore  alembic.ini  backfill_vision.py  etl_ingest.py  pyproject.toml  watcher.py
slydo-backend/.github/workflows/: ci.yml
slydo-backend/alembic/: env.py
slydo-backend/alembic/versions/: a230e89c0230_create_5_tables.py
slydo-backend/app/: __init__.py  config.py  database.py  init_admin.py  main.py  qdrant.py
slydo-backend/app/models/: __init__.py  deck.py  deck_version.py  slide.py  tag.py  usage_log.py  user.py
slydo-backend/app/routers/: admin_users.py  auth.py  config_api.py  deck.py  export.py  ingest.py  monitor.py  recommend.py  slide.py  thumbnail.py  usage.py  usage_dashboard.py  version.py
slydo-backend/app/schemas/: auth.py
slydo-backend/app/services/: export.py  recommend.py
slydo-backend/app/services/etl/: phase1_extract.py  phase2_vision.py  phase3_store.py  phase4_embed.py  version_manager.py
slydo-backend/app/utils/: auth.py  llm.py  retry.py  token_counter.py  vision.py
slydo-backend/scripts/: backfill_embed.py  backfill_vision.py  cleanup_duplicate_slides.py  fix_missing.py  qs_calculate.py  wiki_maintenance.py
slydo-backend/tests/: conftest.py  test_api_integration.py  test_etl_integration.py  test_etl_phase1.py  test_etl_phase2.py  test_etl_phase2_integration.py  test_etl_phase3_4.py  test_export.py  test_recommend.py  test_version_manager.py
(+31 files in other folders)
